--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl_phone_number_input: ^0.7.0+2
   bloc_test:
   mockito:
+  fl_chart: 0.60.0
 
 dev_dependencies:
   flutter_test:
