--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,21 +24,26 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^7.0.0
+  confetti: ^0.7.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
+  flutter_dotenv: ^5.1.0
   json_annotation: ^4.8.1
   freezed: ^2.4.7
+  get_it: ^7.6.7
   google_fonts: 4.0.5
   intl_phone_number_input: ^0.7.0+2
-  bloc_test:
-  mockito:
   fl_chart: 0.60.0
+  flutter_rating_bar: ^4.0.1
+  roulette: ^0.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test:
+  mockito:
   pedantic: ^1.11.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
@@ -53,9 +58,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
